--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typecheck": "tsc -b"
   },
   "dependencies": {
+    "@netlify/edge-bundler": "^8.15.0",
     "@netlify/edge-functions": "^2.0.0",
     "@netlify/functions": "^1.3.0",
     "@netlify/remix-edge-adapter": "1.2.0",
